2008-01-01  Roger Leigh  <rleigh@debian.org>

	* man/sbuild-stats.1.in: Rename from avg-pkg-build-time.1.in.
	Update with --time option and examples.  Update copyright
	information.

	* man/Makefile.am
	(man_MANS): Rename avg-pkg-build-time.1 to sbuild-stats.1.
	(install-data-hook): Create compatibility symlinks for
	avg-pkg-build-*.

	* configure.ac: Add man/sbuild-stats.1.

	* bin/sbuild-stats: Rename from avg-pkg-build-time.  Use
	Getopt::Long.  Unify modes into $mode, and update database
	location based upon $db, which is also set if invoked through a
	compatibility avg-pkg-build-* symlink.

	* bin/Makefile.am
	(bin_SCRIPTS): Add sbuild-stats.
	(pkglibexec_SCRIPTS): Remove avg-pkg-build-time.
	(install-exec-hook): Symlink avg-pkg-build-time and
	avg-pkg-build-space to sbuild-stats.

2007-12-29  Roger Leigh  <rleigh@debian.org>

	* Document chroot abbreviations.

2007-12-29  Roger Leigh  <rleigh@debian.org>

	* man/Makefile.am: Add new manual page.

	* man/sbuild-abort.1.in: New file.

	* bin/Makefile.am: Use new program name.  Create compatibility
	symlink.  Add --list and --set options.

	* lib/Sbuild/Conf.pm: Add and export $package_checklist.

	* configure.ac: Add sbuild-checkpackages.1.

	* bin/sbuild-checkpackages: Rename from bin/checkchroot.  Use
	$Sbuild::Conf::package_checklist for reference list location.

2007-12-29  Roger Leigh  <rleigh@debian.org>

	* sbuild-abort.1.in, sbuild-apt.1.in, sbuild-hold.1.in,
	sbuild-shell.1.in, sbuild-update.1.in, sbuild-upgrade.1.in: New
	manual pages.

	* lib/Sbuild/Utility.pm: Call open_log and close_log in setup and
	cleanup, respectively (following setting nolog=1).  This is to
	create main::LOG and main::PLOG.

	* lib/Sbuild/Sysconfig.pm.in: Use Sbuild::Conf::dpkg.

	* lib/Sbuild/Chroot.pm (begin_session): Ensure $arch is defined.
	Use main::LOG rather than LOG.

	* configure.ac: Add manual pages.

	* bin/sbuild-apt, bin/sbuild-update, bin/sbuild-upgrade: Set
	DEBIAN_FRONTEND to "noninteractive".
